Fixed android doble click/tap in zepto.js (needs refactor) Work on uiformselect, now the element is covered and hidden and the cover updates the value

--- a/source/css/_uiformselect.scss
+++ b/source/css/_uiformselect.scss
@@ -1,5 +1,12 @@
 @include m-all-fields("m-select");
 
-.m-select {
-
+select.m-select {
+	position: relative;
+	top: -1em;
+	opacity: 0.01;
 }
+
+div.m-select {
+	background: white;
+	float: left;
+}	
