--- a/source/css/_uiformtext.scss
+++ b/source/css/_uiformtext.scss
@@ -1,5 +1,5 @@
 @include m-all-fields("m-text");
 
 .m-text {
-	background: red;
+
 }
